# quant-trading

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_full_execute.py
docs/superpowers/plans/: 2026-04-17-quant-trading-mvp.md  2026-04-19-index-membership-daily-implementation.md  2026-04-20-csi500-daily-membership-strict-implementation.md
docs/superpowers/specs/: 2026-04-17-quant-trading-system-design.md  2026-04-19-index-membership-daily-design.md  2026-04-20-csi500-daily-membership-strict-design.md
src/quant_trading/: __init__.py  cli.py  config.py
src/quant_trading/db/: engine.py  init_db.py  schema.py  schema.sql
src/quant_trading/pipeline/: backtest.py  features.py  model.py  orchestrator.py  universe_membership.py
tests/integration/: test_db_init.py  test_orchestrator_flow.py
tests/unit/: test_backtest.py  test_config.py  test_features.py  test_label_split.py  test_model.py  test_orchestrator_universe_daily_expand_strict.py  test_orchestrator_universe_filter.py  test_universe_membership.py
